fix good text taita-ngetchien

--- a/portrait/taita-ngetichfr.html
+++ b/portrait/taita-ngetichfr.html
@@ -56,13 +56,18 @@
         <iframe width="720" height="480" src="https://www.youtube.com/embed/mbkSjJTye7M?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
         </div>
          <div class="container col-md-5 col-md-offset-1">
-        <h2>LE PROJET</h2>
+        <h2>ILLUMINIUM GREENHOUSES</h2>
         <p>
-            Je suis partie du constat que l’Afrique à la population la plus jeune du monde et que cette tendance va probablement s’accroitre dans les prochaines années. D’un autre côté, le continent fait face à de nombreux challenges sociaux-­‐économiques. Or, des solutions pereines et viables existent. Elles sont portées par des personnes que l’on appelle des enrepreneurs sociaux. Je pars alors en Octobre 2015 à la rencontre d’une vingtaine d’entrepreneurs. J’explore 8 pays (Comores, Madagascar, Kenya, Rwanda, Tanzanie, Ouganda, Iles de la Réunion et Maurice,) en 10 semaines dans le but d’identifier leurs besoins et trouver des solutions viables et efficaces à long terme.
+            Illuminium Greenhouses is an Agri-Tech greenhouse and drip installation company in Kenya working with smallholder farmers to improve production and increase efficiency through the use of new modern technologies.</br></br>
+
+<strong>What they do ?</strong></br></br>
+
+We construct affordable modern greenhouses and install automated drip irrigation kits for small holder farmers by using locally available materials and solar powered sensors.
         </p>
         </div>
         </div>
     </div>
+
 
 
 <footer>
