redirect link for taita

--- a/portraiten.html
+++ b/portraiten.html
@@ -56,7 +56,7 @@
 
 
                 <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-                  <a href="portrait/taita-ngetich.html"><img src="portrait/Taita Ngetich.jpg" alt="" /></a>
+                  <a href="portrait/taita-ngetichen.html"><img src="portrait/Taita Ngetich.jpg" alt="" /></a>
                   <h2>Taita Ngetich</h2>
                 </div>
 
