--- a/portraitfr.html
+++ b/portraitfr.html
@@ -62,7 +62,7 @@
 
 
                 <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-                  <a href="portrait/taita-ngetich.html"><img src="portrait/Taita Ngetich.jpg" alt="" /></a>
+                  <a href="portrait/taita-ngetichfr.html"><img src="portrait/Taita Ngetich.jpg" alt="" /></a>
                   <h2>Taita Ngetich</h2>
                 </div>
 
