--- a/portrait/taita-ngetichen.html
+++ b/portrait/taita-ngetichen.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -67,8 +67,8 @@
         </div>
         </div>
     </div>
-    
-    
+
+
 <footer>
         <div class="row">
             <div class="container">
