mise en place du corps de text pour le kenya fr&en

--- a/country/fr/kenyafr.html
+++ b/country/fr/kenyafr.html
@@ -50,6 +50,7 @@
         </div>
     </nav>
 
+
     <!-- Carousel by jquery -->
     <div class="carousel">
         <div class="row">
@@ -112,6 +113,56 @@
         </div>
     </div>
 
+    <div class="kenya">
+        <div class="container">
+            <div class="row">
+                <h1>Contexte économique</h1>
+                <ul>
+                    <li>1ère économie d’Afrique de l’Est</li>
+                    <li> Hub de l’Afrique orientale</li>
+                    <li> Taux de croissance de 5,4% </li>
+                    <li>Rang mondial pour faire affaire : 108 (Doing Business 2016)</li>
+                    <li> Rang mondial pour commencer un business : 151</li>
+                </ul>
+                <h3>PIB :</h3>
+                <ul>
+                    <li>Services : 53%</li>
+                    <li>Industrie : 17%</li>
+                    <li>Agriculture : 29%</li>
+                </ul>
+                <h3>Monnaie :</h3>
+                <ul>
+                    <li>Shilling kenyan</li>
+                    <li>Taux de change : 1€ = 114,2 KES / 1$ = 101,3 KES</li>
+                </ul>
+                <h3>Priorités dans le budget :</h3>
+                <ul>
+                    <li>Développement des infrastructures</li>
+                    <li>Lutte contre la pauvreté</li>
+                    <li>Mise en place de réformes de structure</li>
+                </ul>
+                <h3>1er pays d’Afrique subsaharienne dans le domaine des dépenses suivantes :</h3>
+                <ul>
+                    <li>Le transfert technologique</li>
+                    <li>La recherche et le développement</li>
+                </ul>
+                <h3>Divers</h3>
+                <ul>
+                    <li>Classes moyennes : 20% de la population</li>
+                    <li>Accès au crédit des petites entreprises : ✓</li>
+                    <li>Faiblesses : infrastructures depuis 2009, l'investissements du gouvernements destinés à améliorer l’offre en infrastructures du pays (routes, ports, aéroports, énergie)</li>
+                    <li>Enseignement supérieur : 23ème position parmi les pays d’Afrique subsaharienne → pénurie de main d’oeuvre formée</li>
+                </ul>
+                </br>
+                <h2>Culture entrepreneuriale</h2>
+                <ul>
+                    <li>Fort soutien du gouvernement aux startup locales</li>
+                    <li>1er pays africain en termes d’investissements étrangers dans les startup</li>
+                    <li>Silicon Savannah : creuset de l’innovation numérique au Kenya</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <div class="row">
