--- a/homefr.html
+++ b/homefr.html
@@ -150,6 +150,9 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
         <p>Porteur de Projet</p>
+        <p>
+          Sandrine, Franco-Tchadienne, passionnée de l’entrepreuneuriat et de l’Afrique
+        </p>
         <a href="https://www.facebook.com/sandrine.naguertiga" target="blank">
         <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -166,6 +169,9 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
         <p>Porteur de Projet</p>
+        <p>
+          Justine,franco-comorienne: aime les voyages, amoureuse de l’Afrique
+        </p>
         <a href="https://www.facebook.com/mary269" target="blank">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -198,6 +204,9 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <img class="portrait" src="img/teampict/auriane.jpg" alt="Auriane Goullard" />
         <h3>Auriane Goullard</h3>
         <p>Conseil e-business</p>
+        <p>
+          Auriane, Mme Stratégie, aime l’entrepreneuriat social et les minions
+        </p>
         <a href="https://www.facebook.com/auriane.goullard target="blank"">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -214,6 +223,9 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <img class="portrait" src="img/teampict/unknown.jpg" alt="Nassera SAKAI" />
         <h3>Nassera SAKAI</h3>
         <p>Traductrice</p>
+        <p>
+          Nassera, (traductrice), Aime les langues étrangères
+        </p>
         <a href="">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -246,6 +258,9 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <img class="portrait" src="img/teampict/francois.jpg" alt="François Deféver" />
         <h3>François Deféver</h3>
         <p>Développeur Junior</p>
+        <p>
+          François, développeur, bon vivant
+        </p>
         <a href="https://www.facebook.com/Francois.Fan.Defever" target="blank">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
