--- a/homeen.html
+++ b/homeen.html
@@ -114,7 +114,7 @@
 
     <div class="jumbotron text-justify">
          <div class="container">
-        <h2>LE PROJET</h2>
+        <h2>THE PROJECT</h2>
         <p>
             Further to different trips in Africa, especially Eastern Africa, the following analysis has been observed:</br></br>
 
@@ -150,7 +150,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
-        <p>Porteur de Projet</p>
+        <p>Project Leader</p>
+        <p>
+          Sandrine, she is French, and close to Chad, the country of her parents, passion for social business
+        </p>
         <a href="https://www.facebook.com/sandrine.naguertiga">
         <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -166,7 +169,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
-        <p>Porteur de Projet</p>
+        <p>Project Leader</p>
+        <p>
+          Justine,  attached to France, her country of birth, and to the Comores, the country of her parents
+        </p>
         <a href="https://www.facebook.com/mary269">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -182,7 +188,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/unknown.jpg" alt="Angela NKD" />
         <h3>Angela NKD</h3>
-        <p>Traductrice</p>
+        <p>Translator</p>
         <a href="">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -198,7 +204,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/auriane.jpg" alt="Auriane Goullard" />
         <h3>Auriane Goullard</h3>
-        <p>Conseil e-business</p>
+        <p>Strategy/Business</p>
+        <p>
+          Auriane, Mrs Strategy, likes social business and les minions
+        </p>
         <a href="https://www.facebook.com/auriane.goullard">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -214,7 +223,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/unknown.jpg" alt="Nassera SAKAI" />
         <h3>Nassera SAKAI</h3>
-        <p>Traductrice</p>
+        <p>Translator</p>
+        <p>
+          Nassera, translator, loves foreign languages
+        </p>
         <a href="">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -230,7 +242,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/vincent.jpg" alt="Vincent Deflandre" />
         <h3>Vincent Deflandre</h3>
-        <p>Développeur Junior</p>
+        <p>Web Developer</p>
+        <p>
+          Vincent, web developer, geek and photographer
+        </p>
         <a href="https://www.facebook.com/vincent.deflandre">
          <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -246,7 +261,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/francois.jpg" alt="François Deféver" />
         <h3>François Deféver</h3>
-        <p>Développeur Junior</p>
+        <p>Web Developer</p>
+        <p>
+          François, web developer, enjoys eating, drinking and life in general
+        </p>
         <a href="https://www.facebook.com/Francois.Fan.Defever">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
