add txt & pictures taita-ngetchifr.html

--- a/portrait/taita-ngetichfr.html
+++ b/portrait/taita-ngetichfr.html
@@ -58,17 +58,38 @@
          <div class="container col-md-5 col-md-offset-1">
         <h2>ILLUMINIUM GREENHOUSES</h2>
         <p>
-            Illuminium Greenhouses is an Agri-Tech greenhouse and drip installation company in Kenya working with smallholder farmers to improve production and increase efficiency through the use of new modern technologies.</br></br>
+            Illuminum Serres est une entreprise sociale Agri-tech Kenyane qui travaille avec les petits exploitants (agriculture, aviculture, maraîchers …) dans le but d’accroitre l’efficacité de leurs exploitations grâce à une technologie mobile innovante.</br></br>
 
-<strong>What they do ?</strong></br></br>
+            <strong>Comment ?</strong></br></br>
 
-We construct affordable modern greenhouses and install automated drip irrigation kits for small holder farmers by using locally available materials and solar powered sensors.
+            En construisant des serres modernes et abordables ainsi que des kits d’irrigation automatisés gouttes à gouttes. Avec des matériaux disponibles localement. 
         </p>
         </div>
+        
+
+    <div class="container col-md-offset-1 col-md-10">
+        <h2>Cette start-up sociale contribue à résoudre un des objectifs de développement durable de l’ONU ! </h2>
+        <p>Ce projet contribue à résoudre l'objectif durable N ° 15: protection de la faune et flore terrestre. Plus précisement: préserver et restaurer les écosystèmes terrestres, en veillant à les exploiter de façon durable </p>
+        <div class="tngimg">
+        <img src="../portrait/sustainablegoals.jpg" height="300px" width="500px">
+        <img src="../portrait/15lifeonland.jpg" height="300px" width="300px">
         </div>
     </div>
 
-
+        <div class="container col-md-offset-1 col-md-10">
+        <h2>Qui est l’entrepreneur ?</h2>
+        <img class="col-md-4" src="../portrait/taita-ngetchi.jpg">
+        <p>Taita NGETCHI – Entrepreneur social Kenyan de 25 ans.</p>     
+    </div>
+        <div class="container col-md-offset-1 col-md-10">
+        <h2>Agis maintenant !</h2>
+        <p>Tu veux l’aider un résoudre auquel il fait face ? Contribue à le résoudre sur www.makesense.org ! </p>
+        <div class="tngimg">
+        <a href="https://www.makesense.org/fr" target="blank"><img src="../portrait/makesens.jpg" height="300px" width="600px"></a>
+        </div>
+    </div>
+    </div>
+    </div>
 
 <footer>
         <div class="row">
