--- a/countryen.html
+++ b/countryen.html
@@ -43,14 +43,14 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <li><a href="homeen.html">HOME</a></li>
-                    <li><a href="countryen.html">PAYS</a></li>
+                    <li><a href="countryen.html">COUNTRIES</a></li>
                     <li><a href="portraiten.html">PORTRAITS</a></li>
                     <li><a href="#">BLOG</a></li>
                     <li><a href="contacten.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
-        <h1>Pour chaque pays étudié, retrouvez les ressources suivantes :</h1>
+        <h1>For each country, see the following informations :</h1>
 
 
         <!-- <img src="img/southafrica.jpg" alt="" height="100%" width="100%"/> -->
@@ -61,28 +61,28 @@
             <div class="container">
                 <div class="col-md-6">
                     <h2>
-                        Pays francophone
+                        French speaking countries
                       </h2>
                     <div class="col-md-6">
                         <a href="country/en/senegalen.html">Senegal</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/cotedivoireen.html">Côte d'Ivoire</a>
+                        <a href="country/en/cotedivoireen.html">Ivory Coast</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/comoresen.html">Comores</a>
+                        <a href="country/en/comoresen.html">Comoros</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/en/madagascaren.html">Madagascar</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/reunionen.html">Réunion</a>
+                        <a href="country/en/reunionen.html">Reunion Island</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/ilemauriceen.html">Ile Maurice</a>
+                        <a href="country/en/ilemauriceen.html">Mauritius</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/tchaden.html">Tchad</a>
+                        <a href="country/en/tchaden.html">Chad</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/en/gabonen.html">Gabon</a>
@@ -91,16 +91,16 @@
                         <a href="country/en/malien.html">Mali</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/mauritanieen.html">Mauritanie</a>
+                        <a href="country/en/mauritanieen.html">Mauritania</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/burkinafasoen.html">Burkina-Faso</a>
+                        <a href="country/en/burkinafasoen.html">Burkina Faso</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/en/camerounen.html">Cameroun</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/centreafriqueen.html">Centrafrique</a>
+                        <a href="country/en/centreafriqueen.html">Central African Republic</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/en/beninen.html">Benin</a>
@@ -111,25 +111,25 @@
                 </div>
                 <div class="col-md-6">
                     <h2>
-                    Pays anglophone
+                    English speaking countries
                   </h2>
                     <div class="col-md-6">
-                        <a href="country/en/nigeriaen.html">Nigéria</a>
+                        <a href="country/en/nigeriaen.html">Nigeria</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/en/kenyaen.html">Kenya</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/tanzanieen.html">Tanzanie</a>
+                        <a href="country/en/tanzanieen.html">Tanzania</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/en/rwandaen.html">Rwanda</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/ougandaen.html">Ouganda</a>
+                        <a href="country/en/ougandaen.html">Uganda</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/afriquedusuden.html">Afrique du Sud</a>
+                        <a href="country/en/afriquedusuden.html">South Africa</a>
                     </div>
                     <div class="col-md-6">
 
