--- a/homeen.html
+++ b/homeen.html
@@ -42,7 +42,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="homeen.html">HOME</a></li>
-                <li><a href="countryen.html">PAYS</a></li>
+                <li><a href="countryen.html">COUNTRIES</a></li>
                 <li><a href="portraiten.html">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="contacten.html">CONTACT</a></li>
@@ -66,7 +66,7 @@
                             <div class="img_large" style="background-image:url(img/ads.jpg);">
                                 <p class="text-center">
                                     <span>YES Tour Africa</span>
-                                    <span class="slider_full_desc">Entreprendre Ailleurs</span>
+                                    <span class="slider_full_desc">Yes Youth Can</span>
                                 </p>
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                             <div class="img_large" style="background-image:url(img/gabon.jpg);">
                                 <p class="text-center">
                                     <span>YES Tour Africa</span>
-                                    <span class="slider_full_desc">Entreprendre Ailleurs</span>
+                                    <span class="slider_full_desc">Yes Youth Can</span>
                                 </p>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                             <div class="img_large" style="background-image:url(img/mosque.jpg);">
                                 <p class="text-center">
                                     <span>YES Tour Africa</span>
-                                    <span class="slider_full_desc">Entreprendre Ailleurs</span>
+                                    <span class="slider_full_desc">Yes Youth Can</span>
                                 </p>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                             <div class="img_large" style="background-image:url(img/senegal.jpg);">
                                 <p class="text-center">
                                     <span>YES Tour Africa</span>
-                                    <span class="slider_full_desc">Entreprendre Ailleurs</span>
+                                    <span class="slider_full_desc">Yes Youth Can</span>
                                 </p>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                             <div class="img_large" style="background-image:url(img/southafrica.jpg);">
                                 <p class="text-center">
                                     <span>YES Tour Africa</span>
-                                    <span class="slider_full_desc">Entreprendre Ailleurs</span>
+                                    <span class="slider_full_desc">Yes Youth Can</span>
                                 </p>
                             </div>
                         </div>
