--- a/country/en/reunionen.html
+++ b/country/en/reunionen.html
@@ -41,7 +41,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="../../homeen.html">HOME</a></li>
-                <li><a href="../../countryen.html">PAYS</a></li>
+                <li><a href="../../countryen.html">COUNTRIES</a></li>
                 <li><a href="../../portraiten.html">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="../../contacten.html">CONTACT</a></li>
