--- a/portraiten.html
+++ b/portraiten.html
@@ -42,7 +42,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="homefr.html">HOME</a></li>
-                <li><a href="countryfr.html">PAYS</a></li>
+                <li><a href="countryfr.html">COUNTRIES</a></li>
                 <li><a href="#">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
