fix cofounder homeen homefr

--- a/homeen.html
+++ b/homeen.html
@@ -136,7 +136,7 @@
         <div class="jumbotron">
             <div class="container">
                 <h2>Team YES TOUR AFRICA</h2>
-                <p>Retrouvez ici les contributeurs de l'aventure YES Tour Africa. </p>
+                <p>Discover those who contribute to the YES Tour Africa adventure!</p>
             </div>
         </div>
     </div>
@@ -150,7 +150,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
-        <p>Project Leader</p>
+        <p>CEO</p>
         <p>
           Sandrine, she is French, and close to Chad, the country of her parents, passion for social business
         </p>
@@ -169,7 +169,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
-        <p>Project Leader</p>
+        <p>CEO</p>
         <p>
           Justine,  attached to France, her country of birth, and to the Comores, the country of her parents
         </p>
@@ -189,6 +189,9 @@
         <img class="portrait" src="img/teampict/unknown.jpg" alt="Angela NKD" />
         <h3>Angela NKD</h3>
         <p>Translator</p>
+        <p>
+          Nassera, translator, loves foreign languages
+        </p>
         <a href="">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -256,7 +259,7 @@
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
-
+        <div class="clearfix"></div>
             <!-- François -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/francois.jpg" alt="François Deféver" />
