--- a/homefr.html
+++ b/homefr.html
@@ -149,7 +149,7 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
-        <p>Porteur de Projet</p>
+        <p>Co-Fondatrice</p>
         <p>
           Sandrine, Franco-Tchadienne, passionnée de l’entrepreuneuriat et de l’Afrique
         </p>
@@ -168,7 +168,7 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
-        <p>Porteur de Projet</p>
+        <p>Co-Fondatrice</p>
         <p>
           Justine,franco-comorienne: aime les voyages, amoureuse de l’Afrique
         </p>
@@ -188,6 +188,8 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <img class="portrait" src="img/teampict/unknown.jpg" alt="Angela NKD" />
         <h3>Angela NKD</h3>
         <p>Traductrice</p>
+        <p>
+            Angela, germano-congolaise.
         <a href="">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -203,7 +205,7 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/auriane.jpg" alt="Auriane Goullard" />
         <h3>Auriane Goullard</h3>
-        <p>Conseil e-business</p>
+        <p>Stratégie/Business</p>
         <p>
           Auriane, Mme Stratégie, aime l’entrepreneuriat social et les minions
         </p>
@@ -252,6 +254,7 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
+      <div class="clearfix"></div>
 
             <!-- François -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
