add story vince

--- a/homefr.html
+++ b/homefr.html
@@ -244,6 +244,9 @@ Interconnecter : permettre aux deux continents (africain et européen) d’éch
         <img class="portrait" src="img/teampict/vincent.jpg" alt="Vincent Deflandre" />
         <h3>Vincent Deflandre</h3>
         <p>Développeur Junior</p>
+        <p>
+          Développeur, geek et photographe
+        </p>
         <a href="https://www.facebook.com/vincent.deflandre" target="blank">
          <i class="fa fa-facebook-square fa-3x"></i>
         </a>
