fix bug balise p

--- a/homefr.html
+++ b/homefr.html
@@ -113,180 +113,185 @@
     </div>
 
     <div class="jumbotron text-justify">
-         <div class="container">
-        <h2>LE PROJET</h2>
-        <p>
-            A la suite de voyages effectués dans différents pays d’Afrique de l’Est notamment, il ressort que :</br></br>
--les jeunes sont la catégorie la plus exposée au chomage en raison  d’un secteur public engorgé et un secteur privé assez peu développé.</br></br>
--La population prend conscience du manque d’implication des pouvoirs publics dans la gestion des difficultés économiques et sociales.</br></br>
--Fort développement des NTIC</br></br>
-C’est ainsi que l’on assiste à une croissance des entrepreneurs sociaux qui aspirent à répondre aux besoins de la population locale.
-Cependant fort est de constater un manque d’accompagnement et de visibilité de ces entrepreneurs sociaux.</br></br>
-Notre volonté est qu’à travers YES Tour Africa, nous puissions :</br></br>
+        <div class="container">
+            <h2>LE PROJET</h2>
+            <p>
+                A la suite de voyages effectués dans différents pays d’Afrique de l’Est notamment, il ressort que :</br>
+                </br>
+                -les jeunes sont la catégorie la plus exposée au chomage en raison d’un secteur public engorgé et un secteur privé assez peu développé.</br>
+                </br>
+                -La population prend conscience du manque d’implication des pouvoirs publics dans la gestion des difficultés économiques et sociales.</br>
+                </br>
+                -Fort développement des NTIC</br>
+                </br>
+                C’est ainsi que l’on assiste à une croissance des entrepreneurs sociaux qui aspirent à répondre aux besoins de la population locale. Cependant fort est de constater un manque d’accompagnement et de visibilité de ces entrepreneurs sociaux.</br>
+                </br>
+                Notre volonté est qu’à travers YES Tour Africa, nous puissions :</br>
+                </br>
 
-Informer : partager sur les expériences, informations et conseils sur l’entrepreneuriat social
-Inspirer : mettre en lumière ces entrepreneurs qui innovent et osent sur le continent afin de répondre aux besoins de la population locale. Et qui puissent servir de modèles pour les jeunes.
-Interconnecter : permettre aux deux continents (africain et européen) d’échanger leur savoir faire et bénéficier de l’expérience de chacun des entrepreneurs sociaux.
-        </p>
-    </div>
-    </div>
-
-        <!-- jumbotron -->
-        <div class="jumbotron">
-            <div class="container">
-                <h2>Team YES TOUR AFRICA</h2>
-                <p>Retrouvez ici les contributeurs de l'aventure YES Tour Africa. </p>
-            </div>
+                Informer : partager sur les expériences, informations et conseils sur l’entrepreneuriat social Inspirer : mettre en lumière ces entrepreneurs qui innovent et osent sur le continent afin de répondre aux besoins de la population locale. Et qui puissent
+                servir de modèles pour les jeunes. Interconnecter : permettre aux deux continents (africain et européen) d’échanger leur savoir faire et bénéficier de l’expérience de chacun des entrepreneurs sociaux.
+            </p>
         </div>
     </div>
 
-<div class="container">
-            <!-- Contributors Panel -->
-            <!-- First Line Contributors -->
-    <div class="row">
+    <!-- jumbotron -->
+    <div class="jumbotron">
+        <div class="container">
+            <h2>Team YES TOUR AFRICA</h2>
+            <p>Retrouvez ici les contributeurs de l'aventure YES Tour Africa. </p>
+        </div>
+    </div>
+    </div>
+
+    <div class="container">
+        <!-- Contributors Panel -->
+        <!-- First Line Contributors -->
+        <div class="row">
 
             <!-- Sandrine -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
-        <h3>Sandrine NAGUERTIGA</h3>
-        <p>Co-Fondatrice</p>
-        <p>
-          Sandrine, Franco-Tchadienne, passionnée de l’entrepreuneuriat et de l’Afrique
-        </p>
-        <a href="https://www.facebook.com/sandrine.naguertiga" target="blank">
-        <i class="fa fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
-        </a>
-        <a href="https://fr.linkedin.com/in/sandrine-naguertiga-47a59560" target="blank">
-        <i class="fa fa-linkedin-square fa-3x"></i>
-        </a>
-      </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
+                <h3>Sandrine NAGUERTIGA</h3>
+                <p>Co-Fondatrice</p>
+                <p>
+                    Sandrine, Franco-Tchadienne, passionnée de l’entrepreuneuriat et de l’Afrique
+                </p>
+                <a href="https://www.facebook.com/sandrine.naguertiga" target="blank">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="">
+                    <i class="fa fa-twitter-square fa-3x"></i></i>
+                </a>
+                <a href="https://fr.linkedin.com/in/sandrine-naguertiga-47a59560" target="blank">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+            </div>
 
             <!-- Justine -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
-        <h3>Justine MOURTADHOI</h3>
-        <p>Co-Fondatrice</p>
-        <p>
-          Justine,franco-comorienne: aime les voyages, amoureuse de l’Afrique
-        </p>
-        <a href="https://www.facebook.com/mary269" target="blank">
-          <i class="fa fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="https://twitter.com/MaryJustineMtdh" target="blank">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
-        </a>
-        <a href="https://fr.linkedin.com/in/jmourtadhoi" target="blank">
-        <i class="fa fa-linkedin-square fa-3x"></i>
-        </a>
-      </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
+                <h3>Justine MOURTADHOI</h3>
+                <p>Co-Fondatrice</p>
+                <p>
+                    Justine,franco-comorienne: aime les voyages, amoureuse de l’Afrique
+                </p>
+                <a href="https://www.facebook.com/mary269" target="blank">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="https://twitter.com/MaryJustineMtdh" target="blank">
+                    <i class="fa fa-twitter-square fa-3x"></i></i>
+                </a>
+                <a href="https://fr.linkedin.com/in/jmourtadhoi" target="blank">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+            </div>
 
             <!-- Angela -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/teampict/unknown.jpg" alt="Angela NKD" />
-        <h3>Angela NKD</h3>
-        <p>Traductrice</p>
-        <p>
-            Angela, germano-congolaise.
-        <a href="">
-          <i class="fa fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
-        </a>
-        <a href="">
-        <i class="fa fa-linkedin-square fa-3x"></i>
-        </a>
-      </div>
-        <div class="clearfix"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                <img class="portrait" src="img/teampict/unknown.jpg" alt="Angela NKD" />
+                <h3>Angela NKD</h3>
+                <p>Traductrice</p>
+                <p>
+                    Angela, germano-congolaise.
+                </p>
+                <a href="">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="">
+                    <i class="fa fa-twitter-square fa-3x"></i></i>
+                </a>
+                <a href="">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+            </div>
+            <div class="clearfix"></div>
             <!-- Auriane -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/teampict/auriane.jpg" alt="Auriane Goullard" />
-        <h3>Auriane Goullard</h3>
-        <p>Stratégie/Business</p>
-        <p>
-          Auriane, Mme Stratégie, aime l’entrepreneuriat social et les minions
-        </p>
-        <a href="https://www.facebook.com/auriane.goullard target="blank"">
-          <i class="fa fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
-        </a>
-        <a href="https://fr.linkedin.com/in/auriane-goullard-b2457095 target="blank"">
-        <i class="fa fa-linkedin-square fa-3x"></i>
-        </a>
-      </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                <img class="portrait" src="img/teampict/auriane.jpg" alt="Auriane Goullard" />
+                <h3>Auriane Goullard</h3>
+                <p>Stratégie/Business</p>
+                <p>
+                    Auriane, Mme Stratégie, aime l’entrepreneuriat social et les minions
+                </p>
+                <a href="https://www.facebook.com/auriane.goullard target=" blank "">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="">
+                    <i class="fa fa-twitter-square fa-3x"></i></i>
+                </a>
+                <a href="https://fr.linkedin.com/in/auriane-goullard-b2457095 target=" blank "">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+            </div>
 
             <!-- Nassera -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/teampict/unknown.jpg" alt="Nassera SAKAI" />
-        <h3>Nassera SAKAI</h3>
-        <p>Traductrice</p>
-        <p>
-          Nassera, (traductrice), Aime les langues étrangères
-        </p>
-        <a href="">
-          <i class="fa fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
-        </a>
-        <a href="">
-        <i class="fa fa-linkedin-square fa-3x"></i>
-        </a>
-      </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                <img class="portrait" src="img/teampict/unknown.jpg" alt="Nassera SAKAI" />
+                <h3>Nassera SAKAI</h3>
+                <p>Traductrice</p>
+                <p>
+                    Nassera, (traductrice), Aime les langues étrangères
+                </p>
+                <a href="">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="">
+                    <i class="fa fa-twitter-square fa-3x"></i></i>
+                </a>
+                <a href="">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+            </div>
 
             <!-- Vincent -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/teampict/vincent.jpg" alt="Vincent Deflandre" />
-        <h3>Vincent Deflandre</h3>
-        <p>Développeur Junior</p>
-        <p>
-          Développeur, geek et photographe
-        </p>
-        <a href="https://www.facebook.com/vincent.deflandre" target="blank">
-         <i class="fa fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="https://twitter.com/kiravince" target="blank">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
-        </a>
-        <a href="https://fr.linkedin.com/in/deflandre-vincent-57a050118/fr" target="blank">
-        <i class="fa fa-linkedin-square fa-3x"></i>
-        </a>
-      </div>
-      <div class="clearfix"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                <img class="portrait" src="img/teampict/vincent.jpg" alt="Vincent Deflandre" />
+                <h3>Vincent Deflandre</h3>
+                <p>Développeur Junior</p>
+                <p>
+                    Développeur, geek et photographe
+                </p>
+                <a href="https://www.facebook.com/vincent.deflandre" target="blank">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="https://twitter.com/kiravince" target="blank">
+                    <i class="fa fa-twitter-square fa-3x"></i></i>
+                </a>
+                <a href="https://fr.linkedin.com/in/deflandre-vincent-57a050118/fr" target="blank">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+            </div>
+            <div class="clearfix"></div>
 
             <!-- François -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/teampict/francois.jpg" alt="François Deféver" />
-        <h3>François Deféver</h3>
-        <p>Développeur Junior</p>
-        <p>
-          François, développeur, bon vivant
-        </p>
-        <a href="https://www.facebook.com/Francois.Fan.Defever" target="blank">
-          <i class="fa fa-facebook-square fa-3x"></i>
-        </a>
-        <a href="https://twitter.com/FD_NDPC" target="blank">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
-        </a>
-        <a href="https://fr.linkedin.com/in/francoisdefever" target="blank">
-        <i class="fa fa-linkedin-square fa-3x"></i>
-        </a>
+            <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                <img class="portrait" src="img/teampict/francois.jpg" alt="François Deféver" />
+                <h3>François Deféver</h3>
+                <p>Développeur Junior</p>
+                <p>
+                    François, développeur, bon vivant
+                </p>
+                <a href="https://www.facebook.com/Francois.Fan.Defever" target="blank">
+                    <i class="fa fa-facebook-square fa-3x"></i>
+                </a>
+                <a href="https://twitter.com/FD_NDPC" target="blank">
+                    <i class="fa fa-twitter-square fa-3x"></i></i>
+                </a>
+                <a href="https://fr.linkedin.com/in/francoisdefever" target="blank">
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+            </div>
+            <!-- /Contributors Panel -->
+        </div>
+        <!-- /container -->
     </div>
-    <!-- /Contributors Panel -->
-  </div>
-  <!-- /container -->
-</div>
 
     <div class="mapgoogle">
         <iframe src="https://www.google.com/maps/d/embed?mid=zQMgsNxM0OMc.kYEnzsscMnNc&hl=fr" width="100%" height="480"></iframe>
     </div>
 
-<footer>
+    <footer>
         <div class="row">
             <div class="container">
                 <div class="col-md-6">
