modif link contacten

--- a/contacten.html
+++ b/contacten.html
@@ -38,14 +38,14 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Yes Tour Africa</a>
+                <a class="navbar-brand" href="homeen.html">Yes Tour Africa</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="homefr.html">HOME</a></li>
-                <li><a href="countryfr.html">COUNTRIES</a></li>
+                <li><a href="homeen.html">HOME</a></li>
+                <li><a href="countryen.html">COUNTRIES</a></li>
                 <li><a href="portraiten.html">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="contacten.html">CONTACT</a></li>
             </ul>
         </div>
     </nav>
